--- a/dev-utils/css/variables.css
+++ b/dev-utils/css/variables.css
@@ -33,8 +33,8 @@
     --header-border: #333333;
 
     /* Bobcat Brand Colors */
-    --bobcat-orange: #FF6B00;
-    --bobcat-orange-hover: #e65f00;
+    --bobcat-orange: #FF3600;
+    --bobcat-orange-hover: #e63000;
     --bobcat-black: #000000;
 
     /* Buttons */
